--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "@types/theme-ui": "^0.6.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
@@ -17,6 +18,7 @@
     "react-color": "^2.19.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "resize-observer-polyfill": "^1.5.1",
     "theme-ui": "^0.10.0",
