add backend support download image #104

--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.12",
+    "@types/fabric": "^4.5.3",
+    "@types/lodash": "^4.14.172",
     "@types/method-override": "^0.0.32",
     "@types/mongodb": "^3.6.18",
     "@types/node": "^15.12.5",
+    "canvas": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fabric": "^4.6.0",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.9",
     "nanoid": "^3.1.23",
