--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/method-override": "^0.0.32",
     "@types/mongodb": "^3.6.18",
     "@types/node": "^15.12.5",
+    "aws-sdk": "^2.983.0",
     "canvas": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
